--- a/MusicMattersAdmin/MusicMattersAdmin.csproj
+++ b/MusicMattersAdmin/MusicMattersAdmin.csproj
@@ -63,6 +63,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Albums.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Albums.Designer.cs">
+      <DependentUpon>Albums.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Report.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -89,6 +95,9 @@
     <Compile Include="Reports.Designer.cs">
       <DependentUpon>Reports.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Albums.resx">
+      <DependentUpon>Albums.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
